--- a/dot_config/lsd/config.yaml
+++ b/dot_config/lsd/config.yaml
@@ -34,7 +34,7 @@ color:
 # This specifies the date format for the date column. The freeform format
 # accepts a strftime like string.
 # When "classic" is set, this is set to "date".
-# Possible values: date, locale, relative, '+<date_format>'
+# Possible values: date, relative, '+<date_format>'
 # `date_format` will be a `strftime` formatted value. e.g. `date: '+%d %b %y %X'` will give you a date like this: 17 Jun 21 20:14:55
 date: date
 
@@ -56,7 +56,7 @@ icons:
   when: never
   # Which icon theme to use.
   # Possible values: fancy, unicode
-  theme: unicode
+  theme: fancy
   # Separator between icon and the name
   # Default to 1 space
   separator: " "
@@ -93,8 +93,8 @@ size: default
 
 # == Permission ==
 # Specify the format of the permission column
-# Possible value: rwx, octal, attributes (windows only), disable
-# permission: rwx
+# Possible value: rwx, octal
+permission: rwx
 
 # == Sorting ==
 sorting:
@@ -132,17 +132,3 @@ symlink-arrow: ⇒
 # Whether to display block headers.
 # Possible values: false, true
 header: false
-
-# == Literal ==
-# Whether to show quotes on filenames.
-# Possible values: false, true
-literal: false
-
-# == Truncate owner ==
-# How to truncate the username and group names for a file if they exceed a certain
-# number of characters.
-truncate-owner:
-  # Number of characters to keep. By default, no truncation is done (empty value).
-  after:
-  # String to be appended to a name if truncated.
-  marker: ""
